--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table Cellspacing="20">
     <tr>
-      <td><img src="Tinku photo.png " height="200" width="200" alt="Tinku Profile Picture"></td>
+      <td><img src="Tinku Photo.png " height="200" width="200" alt="Tinku Profile Picture"></td>
       <td>
         <h1>Tinku</h1>
         <p><em>Founder and CEO of the <strong><a href="https://apnidigital.com/">Apni Digital</a></strong></em></p>
